--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run build:client && npm run build:server && node prerender.js",
-    "build:client": "vite build --outDir dist/client",
+    "build:client": "vite build --outDir dist",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
     "lint": "eslint .",
     "preview": "vite preview",
